--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ngx-toastr/toastr.css",
              "node_modules/devextreme/dist/css/dx.common.css",
               "node_modules/devextreme/dist/css/dx.light.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+
               ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js"
